Changes on README

--- a/ELECTRE_III_Research.ipynb
+++ b/ELECTRE_III_Research.ipynb
@@ -8,12 +8,9 @@
       },
       "outputs": [],
       "source": [
-        "# Created by: Prof. Valdecy Pereira, D.Sc.\n",
-        "# UFF - Universidade Federal Fluminense (Brazil)\n",
-        "# email:  valdecy.pereira@gmail.com\n",
-        "# Lesson: Ranking Trees - ELECTRE III\n",
-        "\n",
-        "# GitHub Repository: <https://github.com/Valdecy>"
+        "# Research Example created by: Yuri Pessoa M.Sc.\n",
+        "# email:  yuri.mp@outlook.com\n",
+        "# GitHub Repository: <https://github.com/yuri_pessoa>"
       ]
     },
     {
