Changes in the file example

--- a/ELECTRE_III_Research_Example.ipynb
+++ b/ELECTRE_III_Research_Example.ipynb
@@ -9,8 +9,9 @@
       "outputs": [],
       "source": [
         "# Research Example created by: Yuri Pessoa M.Sc.\n",
+        "# Federal University of Goiás (UFG)\n",
         "# email:  yuri.mp@outlook.com\n",
-        "# GitHub Repository: <https://github.com/yuri_pessoa>"
+        "# GitHub Repository: <https://github.com/yuri-pessoa>"
       ]
     },
     {
